--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,8 @@ jobs:
           pip install fastapi uvicorn pytest requests
       - name: Start server
         run: |
-          nohup python -u MobyPark/api/server.py >/dev/null 2>&1 &
+          cd MobyPark
+          nohup python -u api/server.py >/dev/null 2>&1 &
           for i in {1..30}; do
             if curl -sS "http://localhost:8000/index" > /dev/null; then
               echo "Server is up"
