--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
 requests>=2.25.0
+fastapi>=0.68.0
+uvicorn>=0.15.0
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+python-multipart>=0.0.5
 python-dotenv>=0.19.0
+requests>=2.25.0
+psycopg2-binary>=2.9.1
+python-dateutil>=2.8.2
+pydantic>=1.8.2
