--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest
+          
+      - name: Create database directory and file
+        run: |
+          mkdir -p MobyPark/api/data
+          touch MobyPark/api/data/MobyParkData.db
 
       - name: Start server
         working-directory: MobyPark
