--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       PYTHONPATH: .:./MobyPark:./MobyPark/api
+      MOBYPARK_DB_DIR: MobyPark/api/data   # all code uses this DB dir
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -24,50 +26,15 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest
-          
+          pip install pytest uvicorn
+
       - name: Create database directory and file
         run: |
           mkdir -p MobyPark/api/data
           touch MobyPark/api/data/MobyParkData.db
 
-      - name: Install uvicorn
-        run: |
-          pip install uvicorn
-
-      - name: Start server
-        working-directory: MobyPark
-        run: |
-          # Start FastAPI server with uvicorn in background
-          python -m uvicorn api.app:app --host 0.0.0.0 --port 8000 > server.log 2>&1 &
-          SERVER_PID=$!
-          echo "Started FastAPI server with uvicorn (PID: $SERVER_PID)"
-
-          # Wait for server to be ready, but also check if it crashes
-          for i in {1..30}; do
-            if curl -sS http://127.0.0.1:8000/ >/dev/null 2>&1; then
-              echo "Server is up and running"
-              exit 0
-            fi
-
-            # If process died, show log and fail immediately
-            if ! ps -p $SERVER_PID >/dev/null 2>&1; then
-              echo "Server process died before we could connect"
-              echo "==== server.log ===="
-              cat server.log
-              exit 1
-            fi
-
-            sleep 1
-          done
-
-          # If we get here, server didn't come up in time
-          echo "Timed out waiting for server to start"
-          echo "==== server.log ===="
-          cat server.log
-          kill $SERVER_PID 2>/dev/null || true
-          echo "pipeline failed: server did not start in time" > result.txt
-          exit 1
+      # ⚠️ No manual server start here!
+      # e2e tests start uvicorn themselves via tests/e2e/conftest.py
 
       - name: Run unit tests
         run: |
@@ -80,7 +47,7 @@ jobs:
             exit 1
           fi
 
-      - name: Run endpoint tests
+      - name: Run endpoint (e2e) tests
         run: |
           set +e
           pytest -v tests/e2e
@@ -102,18 +69,11 @@ jobs:
             exit 1
           fi
 
-      - name: Upload server log
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: server-log
-          path: MobyPark/server.log
-          if-no-files-found: warn
-
       - name: Upload failure reason
         if: failure()
         uses: actions/upload-artifact@v4
         with:
           name: failure-reason
-          path: MobyPark/result.txt
+          path: result.txt
           if-no-files-found: ignore
+
