--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,11 +7,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  pipeline-job-definition:
+  tests:
     runs-on: ubuntu-latest
-    env:
-      PYTHONPATH: .:./MobyPark:./MobyPark/api
-      MOBYPARK_DB_DIR: MobyPark/api/data
 
     steps:
       - name: Checkout repository
@@ -25,53 +22,14 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest uvicorn
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install pytest uvicorn requests bcrypt
 
+      # Optional, only if your code expects this directory to exist
       - name: Prepare default database directory
         run: |
           mkdir -p MobyPark/api/data
 
-      # 👇 This is the important part: same folder as VS Code
-      - name: Run tests (same folder as VS Code)
+      - name: Run all tests (like VS Code)
         run: |
-          python -m pytest -v tests/unit
-          # ^ change to "tests" or "tests/e2e" if that's what you configured
-
-      - name: Upload failure reason
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: failure-reason
-          path: result.txt
-          if-no-files-found: ignore
-
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest uvicorn
-
-      # (Optional) create a default DB dir for non-e2e tests if they use it
-      - name: Prepare default database directory
-        run: |
-          mkdir -p MobyPark/api/data
-
-      - name: Run tests (like VS Code Testing)
-        run: |
-          python -m pytest -v
-
-      - name: Upload failure reason
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: failure-reason
-          path: result.txt
-          if-no-files-found: ignore
-
+          python -m pytest -vv tests
