--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,11 @@ jobs:
   tests:
     runs-on: ubuntu-latest
 
+    env:
+      PYTHONPATH: .:./MobyPark:./MobyPark/api
+      # 🔴 REMOVE this line if you have it:
+      # MOBYPARK_DB_DIR: tests/test_data
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -33,3 +38,4 @@ jobs:
       - name: Run all tests (like VS Code)
         run: |
           python -m pytest -vv tests
+
