Add debug step to display login snippet
Added a debug step to show a login snippet from app.py.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,11 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           pip install pytest uvicorn requests bcrypt
 
+      - name: Debug: show login snippet
+        run: |
+          sed -n '1,160p' MobyPark/api/app.py
+
       - name: Run all tests (same as local)
         run: |
           python -m pytest -vv tests
-
 
