Update branch for workflow trigger to ci-testbranch
temporary change in branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,9 @@ name: CI pipeline
 on:
   push:
     branches:
-      - main
+      - ci-testbranch
   workflow_dispatch:
-
+      
 jobs:
   tests:
     runs-on: ubuntu-latest
