Notify Uptime Kuma when tests succeed
Add notification step for Uptime Kuma on test success

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,8 @@ jobs:
       - name: Run all tests (same as local)
         run: |
           python -m pytest -vv tests
-
+          
+      - name: Notify Uptime Kuma (tests success)
+        if: ${{ success() }}
+        run: |
+          curl -fsS --retry 3 "${{ secrets.UPTIME_KUMA_PUSH_URL }}?status=up&msg=Tests+OK"
