--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,4 @@ jobs:
       - name: Notify Uptime Kuma (tests success)
         if: ${{ success() }}
         run: |
-          curl -fsS --retry 3 "${{ secrets.UPTIME_KUMA_PUSH_URL }}?status=up&msg=Tests+OK"
+          curl -fsS --retry 3 "https://team6.hoofr.dev/api/push/sJnSlUyzvb?status=up&msg=OK&ping="
