--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,4 +40,5 @@ jobs:
       - name: Notify Uptime Kuma (tests success)
         if: ${{ success() }}
         run: |
-          curl --retry 3 --max-time 60 --connect-timeout 10 <"https://team6.hoofr.dev/api/push/sJnSlUyzvb?status=up&msg=OK&ping=">
+          curl --retry 3 --max-time 60 --connect-timeout 10 "https://team6.hoofr.dev/api/push/sJnSlUyzvb?status=up&msg=OK&ping="
+
