--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,27 +32,43 @@ jobs:
         SERVER_IP: 145.24.223.87
         SERVER_USER: ubuntu-1056396
       run: |
-        # Test SSH connection first
-        echo "Testing SSH connection..."
-        if ! ssh -o ConnectTimeout=10 -o BatchMode=yes -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "echo SSH Connection successful"; then
-          echo "SSH connection test failed. Please check:"
-          echo "1. Server is running and accessible"
-          echo "2. Firewall allows incoming connections on port 22"
-          echo "3. SSH service is running on the server"
+        # 1. Check basic connectivity
+        echo "=== Network Diagnostics ==="
+        echo "Server IP: $SERVER_IP"
+        echo "Pinging server..."
+        ping -c 4 $SERVER_IP || echo "Ping failed"
+        
+        echo -e "\n=== SSH Connection Test ==="
+        ssh -v -o ConnectTimeout=10 -o BatchMode=yes -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "echo SSH Connection successful" || {
+          echo -e "\n=== SSH Connection Failed ==="
+          echo "Possible issues:"
+          echo "1. Server firewall blocking port 22"
+          echo "2. Server not running SSH service"
+          echo "3. Network restrictions (security groups, NACLs, etc.)"
+          echo "4. Server IP might be incorrect or not publicly accessible"
+          echo -e "\n=== Debug Info ==="
+          echo "Current public IP: $(curl -s ifconfig.me)"
           exit 1
-        fi
+        }
 
-        # Create deployment directory
+        # 2. Proceed with deployment if SSH test passes
+        echo -e "\n=== Starting Deployment ==="
         DEPLOY_DIR="mobypark-$(date +%Y%m%d%H%M%S)"
         
-        # Copy files using rsync (more reliable than scp)
+        # 3. Copy files using rsync
         echo "Copying files to server using rsync..."
-        rsync -avz -e "ssh -o StrictHostKeyChecking=no" --exclude='.git' --exclude='.github' ./ $SERVER_USER@$SERVER_IP:~/$DEPLOY_DIR/ || {
+        rsync -avz -e "ssh -o StrictHostKeyChecking=no" \
+          --exclude='.git' \
+          --exclude='.github' \
+          --exclude='.gitignore' \
+          --exclude='.vscode' \
+          --exclude='__pycache__' \
+          ./ $SERVER_USER@$SERVER_IP:~/$DEPLOY_DIR/ || {
           echo "Failed to copy files to server"
           exit 1
         }
 
-        # Run deployment commands
+        # 4. Run deployment commands
         echo "Running deployment commands..."
         ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "
           set -e  # Exit on error
