Refactor deployment workflow in main.yml
Updated deployment workflow to streamline SSH setup and file upload process.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,21 +2,19 @@ name: Deploy to Production
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     env:
       SERVER_IP: 145.24.223.87
       SERVER_USER: ubuntu-1056396
+      TARGET_DIR: /home/ubuntu-1056396/mobypark
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.9.0
@@ -26,75 +24,31 @@ jobs:
       - name: Add known hosts
         run: |
           mkdir -p ~/.ssh
-          touch ~/.ssh/known_hosts
-          chmod 600 ~/.ssh/known_hosts
-          echo "Adding $SERVER_IP to known_hosts..."
-          ssh-keyscan -v -H "$SERVER_IP" >> ~/.ssh/known_hosts 2>&1 || echo "ssh-keyscan failed, but continuing..."
-          cat ~/.ssh/known_hosts
+          chmod 700 ~/.ssh
+          ssh-keyscan -H "$SERVER_IP" >> ~/.ssh/known_hosts
 
-      - name: Deploy to server
+      - name: Upload code (rsync)
         run: |
-          # 1. Check basic connectivity
-          echo "=== Network Diagnostics ==="
-          echo "Server IP: $SERVER_IP"
-          echo "Pinging server..."
-          ping -c 4 "$SERVER_IP" || echo "Ping failed (ICMP may be blocked, this is not always fatal)"
-
-          # 2. Test SSH connection with explicit username
-          echo -e "\n=== Testing SSH Connection ==="
-          ssh -v -o ConnectTimeout=10 -o BatchMode=yes -o StrictHostKeyChecking=no \
-            "$SERVER_USER@$SERVER_IP" "echo SSH Connection successful" || {
-            echo -e "\n=== SSH Connection Failed ==="
-            echo "Possible issues:"
-            echo "1. SSH key authentication failed (wrong key / not in authorized_keys)"
-            echo "2. Server firewall blocking port 22"
-            echo "3. SSH service not running or wrong username"
-            exit 1
-          }
-
-          # 3. Proceed with deployment if SSH test passes
-          echo -e "\n=== Starting Deployment ==="
-          DEPLOY_DIR="mobypark-$(date +%Y%m%d%H%M%S)"
-
-          # 4. Copy files using rsync with explicit username
-          echo "Copying files to server using rsync..."
-          rsync -avz -e "ssh -o StrictHostKeyChecking=no" \
+          rsync -az --delete -e "ssh -o StrictHostKeyChecking=yes" \
             --exclude='.git' \
             --exclude='.github' \
-            --exclude='.gitignore' \
-            --exclude='.vscode' \
             --exclude='__pycache__' \
-            ./ "$SERVER_USER@$SERVER_IP:~/$DEPLOY_DIR/" || {
-            echo "Failed to copy files to server"
-            exit 1
-          }
+            ./ "$SERVER_USER@$SERVER_IP:$TARGET_DIR/"
 
-          # 5. Run deployment commands
-          echo "Running deployment commands..."
-          ssh -o StrictHostKeyChecking=no "$SERVER_USER@$SERVER_IP" "
-            set -e  # Exit on error
-
-            echo 'Creating symlink...'
-            ln -nfs ~/$DEPLOY_DIR ~/mobypark-current
-
-            echo 'Changing to deployment directory...'
-            cd ~/mobypark-current
+      - name: Run deploy script + restart service
+        run: |
+          ssh "$SERVER_USER@$SERVER_IP" "
+            set -e
+            cd $TARGET_DIR
 
             if [ -f deploy.sh ]; then
-              echo 'Running deploy.sh...'
               chmod +x deploy.sh
               ./deploy.sh
             else
-              echo 'Error: deploy.sh not found in the repository root!'
-              ls -la
+              echo 'deploy.sh not found in repo root'
               exit 1
             fi
 
-            echo 'Cleaning up old deployments...'
-            ls -dt ~/mobypark-* 2>/dev/null | tail -n +6 | xargs -r rm -rf
-          " || {
-            echo "Deployment failed"
-            exit 1
-          }
-
-          echo "Deployment completed successfully!"
+            sudo systemctl restart mobypark
+            sudo systemctl status mobypark --no-pager -l | tail -n 30
+          "
