Modify deployment workflow to stop service before sync
Updated deployment script to stop the service before syncing files and added additional exclusions.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,21 +15,27 @@ jobs:
 
       - name: Deploy locally
         run: |
-          set -e
-          TARGET_DIR="/home/ubuntu-1056396/mobypark"
-
-          rsync -az --delete \
-            --exclude='.git' \
-            --exclude='.github' \
-            --exclude='__pycache__' \
-            ./ "$TARGET_DIR/"
-
-          cd "$TARGET_DIR"
-
-          if [ -f deploy.sh ]; then
-            chmod +x deploy.sh
-            ./deploy.sh
-          fi
-
-          sudo systemctl restart mobypark
-          sudo systemctl status mobypark --no-pager -l | tail -n 30
+            set -e
+            TARGET_DIR="/home/ubuntu-1056396/mobypark"
+        
+            # Stop service zodat files niet "locked" zijn
+            sudo systemctl stop mobypark || true
+        
+            rsync -az \
+              --exclude='.git' \
+              --exclude='.github' \
+              --exclude='__pycache__' \
+              --exclude='venv/' \
+              --exclude='.venv/' \
+              --exclude='tests/e2e_backup/' \
+              ./ "$TARGET_DIR/"
+        
+            cd "$TARGET_DIR"
+        
+            if [ -f deploy.sh ]; then
+              chmod +x deploy.sh
+              ./deploy.sh
+            fi
+        
+            sudo systemctl start mobypark
+            sudo systemctl status mobypark --no-pager -l | tail -n 30
