Add debug step for runner user in workflow
Added debugging steps to check runner user information.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,12 @@ jobs:
           cd /home/ubuntu-1056396/mobypark
           chmod +x deploy.sh
           ./deploy.sh
+      - name: Debug runner user
+        run: |
+          whoami
+          id
+          pwd
+          which systemctl
 
       - name: Restart service
         run: |
