--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,20 +12,21 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Debug runner user
         run: |
           whoami
           id
-          pwd
           which systemctl
+
       - name: Run deploy script
         run: |
           cd /home/ubuntu-1056396/mobypark
           chmod +x deploy.sh
           ./deploy.sh
-      
 
-      - name: Restart service
+      - name: Restart mobypark service
         run: |
-          sudo systemctl restart mobypark
-          sudo systemctl status mobypark --no-pager
+          sudo -n systemctl daemon-reload
+          sudo -n systemctl restart mobypark
+          sudo -n systemctl status mobypark --no-pager
