--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Restart mobypark service
         run: |
-          sudo -n systemctl daemon-reload
-          sudo -n systemctl restart mobypark
-          sudo -n systemctl status mobypark --no-pager
+          sudo -n /usr/bin/systemctl daemon-reload
+          sudo -n /usr/bin/systemctl restart mobypark
+          sudo -n /usr/bin/systemctl status mobypark --no-pager
+
